app.js: New shell status line support. cash: minor fixes to get shift bebin movement and ticket inserted in the DB.

--- a/site/htdocs/avanty/style/avanty.css
+++ b/site/htdocs/avanty/style/avanty.css
@@ -295,6 +295,14 @@ button.shell-tool img {
 	border-bottom: 1px solid lightgray;
 }
 
+.shell-status {
+	position: absolute;
+	top: 66px;
+	left: 0.5em;
+	width: calc(100% - 1em);
+	font-size: 75%;
+}
+
 input[type="text"].money {
 	text-align: right;
 }
